--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p>GIT RESET ES</p>
     <h1 style="display: inline;">PELIGRO</h1>
     <img src="../OtroProyecto/chanchitos.txt" alt="">
+    <p>Posible muertes</p>
 </body>
 
 </html>
