--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h1 style="display: inline;">PELIGRO</h1>
     <img src="../OtroProyecto/chanchitos.txt" alt="">
     <p>Posible muertes</p>
+    <p>Posible vidas</p>
 </body>
 
 </html>
