--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
-    <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body style="background-color: black; color:white">
     <h1 style="text-align: center;">Mi historia</h1>
     <p>
         2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero, mira,
@@ -17,12 +16,7 @@
         Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus pasos,
         me adentré a la vida de un programador.
     </p>
-
-    <p>GIT RESET ES</p>
-    <h1 style="display: inline;">PELIGRO</h1>
-    <img src="../OtroProyecto/chanchitos.txt" alt="">
-    <p>Posible muertes</p>
-    <p>Posible vidas</p>
+    <p>Mañana igaul y como bueno</p>
 </body>
 
 </html>
