Corrigiendo el error de la linea 21

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </p>
     <p>Mañana igaul y como bueno</p>
     <p>Pero igual no ostia</p>
-    <p>Mi mamá no me quiere</p>
+    <p>Mi mamá me ama</p>
 </body>
 
 </html>
