Reemplazando ultimos 3 parrafos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus pasos,
         me adentré a la vida de un programador.
     </p>
-    <p>Mañana igaul y como bueno</p>
-    <p>Pero igual no ostia</p>
-    <p>Mi mamá me ama</p>
+    <p>Mañana espero estar mejor</p>
 </body>
 
 </html>
