Enchulando la nave del main

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Historia</title>
 </head>
 
-<body style="background-color: black; color:white">
-    <h1 style="text-align: center;">Mi historia</h1>
-    <p>
-        2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero, mira,
-        nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br>
-        Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus pasos,
-        me adentré a la vida de un programador.
-    </p>
-    <p>Mañana espero estar mejor</p>
-    <p>OLa2</p>
+<body>
+    <main class="container">
+        <h1>Mi historia</h1>
+        <p>
+            2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero, mira,
+            nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br>
+            Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus
+            pasos, me adentré a la vida de un programador. <br>
+            Aun no termino mi vida como estudiante universitario, pero cuanto queisiera que fuera mas facil. La gran
+            mayoria de personas solo piensan en salir de su tiempo y pensar que se puede en si, sin sufrir consecuencias
+        </p>
+
+    </main>
 </body>
 
 </html>
