Estructura inicial del header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+        <div>------------------------------------CABEZERA------------------------------------</div>
+    </header>
     <main class="container">
         <h1>Mi historia</h1>
         <p>
