Enchulando el header con pseudoclases

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 <body>
     <header>
         <div>------------------------------------CABEZERA------------------------------------</div>
+        <div>
+            <ul class="links">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Mas informacion</a>
+                </li>
+                <li>
+
+                    <a href="#">Opciones Avanzadas</a>
+                </li>
+                <li>
+                    <a href="#">Exit</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main class="container">
         <h1>Mi historia</h1>
@@ -23,7 +40,7 @@
             Aun no termino mi vida como estudiante universitario, pero cuanto queisiera que fuera mas facil. La gran
             mayoria de personas solo piensan en salir de su tiempo y pensar que se puede en si, sin sufrir consecuencias
         </p>
-
+        text-decoration: none;
     </main>
 </body>
 
