--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div>------------------------------------CABEZERA------------------------------------</div>
+        <div>------------------------------------ <span>CABEZERA</span> ------------------------------------</div>
         <div>
             <ul class="links">
                 <li>
@@ -30,17 +30,20 @@
             </ul>
         </div>
     </header>
-    <main class="container">
-        <h1>Mi historia</h1>
-        <p>
-            2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero, mira,
-            nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br>
-            Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus
-            pasos, me adentré a la vida de un programador. <br>
-            Aun no termino mi vida como estudiante universitario, pero cuanto queisiera que fuera mas facil. La gran
-            mayoria de personas solo piensan en salir de su tiempo y pensar que se puede en si, sin sufrir consecuencias
-        </p>
-        text-decoration: none;
+    <main>
+        <div class="container">
+            <h1>Mi historia</h1>
+            <p>
+                2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero,
+                mira,
+                nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br>
+                Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus
+                pasos, me adentré a la vida de un programador. <br>
+                Aun no termino mi vida como estudiante universitario, pero cuanto queisiera que fuera mas facil. La gran
+                mayoria de personas solo piensan en salir de su tiempo y pensar que se puede en si, sin sufrir
+                consecuencias
+            </p>
+        </div>
     </main>
 </body>
 
