Actualizando el hader con su nombre en inglés

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div>------------------------------------ <span>CABEZERA</span> ------------------------------------</div>
+        <div>------------------------------------ <span>HEADER</span> ------------------------------------</div>
         <div>
             <ul class="links">
                 <li>
