Cambiando la informacion del header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Mas informacion</a>
+                    <a href="#">More Information</a>
                 </li>
                 <li>
 
