Agregando lo que me paso hoy

--- a/index.html
+++ b/index.html
@@ -36,12 +36,29 @@
             <p>
                 2003, 25 de febrero. Un día cualquiera, un día de los que no piensas que pasará algo importante; pero,
                 mira,
-                nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br>
+                nació alguien, otra persona para aburrise en este mundo, o talves solo a divertirse. <br> <br>
                 Mi madre junto con mi abuelo me dieron la oportunidad de llamarme como un gran Psicólogo, sin seguir sus
-                pasos, me adentré a la vida de un programador. <br>
+                pasos, me adentré a la vida de un programador. <br> <br>
                 Aun no termino mi vida como estudiante universitario, pero cuanto queisiera que fuera mas facil. La gran
                 mayoria de personas solo piensan en salir de su tiempo y pensar que se puede en si, sin sufrir
                 consecuencias
+            </p> <br>
+            <p>VOLVI SEÑORES, FUE UN LARGO CAMINO POR UBUNTU</p> <br>
+            <p>Talves lo volveria a hacer, pero, no me gustó la interfaz del todo, su sistema de archivos (que tampoco
+                tiene nada que envidiar) y tampoco me gustó la velocidad de los programas</p>
+            <p> <br>
+                Ah ver, que tampoco soy un desarrollador only linux, y creo que a lo que me estoy hacercando es al lado
+                frontend y pues, no necesito tanto linux. Loq ue me defraudó mas es que no podia tener SQL Server
+                2019(ni el 2022), tenia que instalar el UBUNTU 20.04 LTS. Ahi me rayé, ya no quise mas nada y pues me
+                fui
+            </p> <br>
+            <p>
+                Tengo mucha suerte de tener una buena pc, porque de otro modo me hubiera costado la vida instalar de
+                nuevo todo, madre mia. Agradecido con mi madre que me doy el lujo de tener un arma blanca para obtener
+                todo a mi alcance en este nuevo mundo.
+            </p><br>
+            <p>
+                No soy creyente pero que Dios la guarde.
             </p>
         </div>
     </main>
